# UAARGcapstone

./: .gitignore  Doxyfile  README.md  camera.cpp  cameraArray.h  configuration.h  main.cpp  meson.build  meson_options.txt
.github/workflows/: c-cpp.yml
demo/: main.cpp  meson.build
imageProcessing/: imageProcessingPipeline.cpp  imageProcessingPipeline.h
poc/camera-libuvc-broken/: README  main.c
poc/camera-opencv/: cameraArray.cpp  cameraArray.h  meson.build  poc.cpp
poc/camera-v4l/: meson.build  poc.c
src/: camera.h  cameraArray.cpp  cameraArray.h  cameraController.cpp  cameraController.h  main.cpp  meson.build  videoStream.cpp  videoStream.h
src/imageProcessing/: imageProcessingPipeline.cpp  imageProcessingPipeline.h  meson.build  standardFilter.cpp  standardFilter.h  standardOutput.cpp  standardOutput.h
src/utils/: common.h  timer.cpp  timer.h
test/: meson.build  pipeline.cpp  sample.cpp
utils/: meson.build
